--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
+    "@testing-library/vue": "^6.6.1",
     "@vitejs/plugin-vue": "^3.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/test-utils": "^2.0.2",
@@ -22,7 +23,7 @@
     "jsdom": "^20.0.0",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
-    "tailwindcss": "^3.1.8",
+    "sass": "^1.54.3",
     "vite": "^3.0.1",
     "vitest": "^0.18.1"
   }
